// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-sc-1ckoy3q-0 kmozGc"
>
  <h2
    class="feature__SubTitle-sc-1ckoy3q-2 fTZqzz"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-1ckoy3q-0 kmozGc"
>
  <h1
    class="feature__Title-sc-1ckoy3q-1 djyOyP"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-1ckoy3q-0 kmozGc"
>
  <h1
    class="feature__Title-sc-1ckoy3q-1 djyOyP"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-1ckoy3q-2 fTZqzz"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
